fix align of tables

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -1,24 +1,23 @@
 *{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 body {
     position: relative;
-    height: 820px;
+    height: 100%;
     width: 595px;
     margin: auto auto;
     border: 1px solid rgb(0, 0, 0);
 }
-table {
-    border: 1px solid black;
-}
 
 header{
     height: 200px;
-    width: 100%;
-    margin-top: 20px;
-    display: inline-flex;
+    width: 83.33%;
+    margin: 30px auto;
+    display: flex;
 justify-content: space-around;
 }
 
@@ -32,11 +31,44 @@ span {
 ul,
 li {
     list-style: none;
+    margin-bottom: 0;
+    padding: 0px;
 }
+
 .contact li.basicInfomation{
     margin-bottom: 5px;
 }
 .contact li.contact {
     margin-top: 10px;
     margin-bottom: 5px;
+}
+
+main{
+    position: relative;
+    margin: 40px auto;
+    width: 83.33%;
+}
+main section {
+    margin-top: 30px;
+}
+.overviewSelf p {
+    text-align: justify;
+}
+
+
+table,
+th,
+td {
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+.education table th{
+    text-align: center;
+}
+.education table td {
+    padding: 5px;
+}
+.skill table th,
+.skill table td {
+padding: 10px;
 }
